# scene-recognition-robot

./: .gitignore  CMakeLists.txt  MANUAL_UBUNTU_NO_GIT.md  README.md  SETUP.md  SETUP_UBUNTU.md  requirements.txt  setup_catkin_ws.sh
docs/: 手动建图指南.md
install/: bootstrap_ubuntu.sh  create_all_on_ubuntu.sh  gen_script.py  install_deps.sh  setup_ros_and_build.sh  sync_scripts.sh
src/scene_recognition_robot/: CMakeLists.txt  package.xml
src/scene_recognition_robot/config/: amcl_gazebo.yaml  costmap_common.yaml  gazebo_rooms.yaml  global_costmap.yaml  mission.yaml  mission_gazebo.yaml  move_base.yaml  scene_rules.yaml
src/scene_recognition_robot/launch/: demo_mock.launch  full_mission.launch  gazebo_sim.launch  scene_recognition.launch  slam_manual.launch
src/scene_recognition_robot/maps/: house_map.pgm  house_map.yaml
src/scene_recognition_robot/msg/: DetectedObject.msg  SceneResult.msg
src/scene_recognition_robot/scripts/: gazebo_gt_detection_node.py  generate_house_map.py  mission_controller_node.py  object_detection_node.py  rosrun_src.sh  scene_inference_node.py  tts_node.py
src/scene_recognition_robot/srv/: AnnounceScene.srv
src/scene_recognition_robot/worlds/: scene_house.world
